# linkedin-profile-scraper

./: .gitignore  README.md  pipelines.py  pyproject.toml  requirements.txt
src/: config.toml  linkedin_profile.json  linkedin_profile_data.json
src/linkedin_profile_scraper_javier_munoz_tous/: items.py  middlewares.py  scrapy.cfg  settings.py
src/linkedin_profile_scraper_javier_munoz_tous/linkedin_profile_scraper_javier_munoz_tous/: items.py  middlewares.py  pipelines.py  settings.py
src/linkedin_profile_scraper_javier_munoz_tous/linkedin_profile_scraper_javier_munoz_tous/proxy/: list.txt
src/linkedin_profile_scraper_javier_munoz_tous/linkedin_profile_scraper_javier_munoz_tous/spiders/: linkedin_profile.py
src/linkedin_profile_scraper_javier_munoz_tous/spiders/: linkedin_profile.py
