[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin_profile_scraper_javier_munoz_tous"
version = "0.0.1"
authors = [
  { name="Javier Muñoz Tous", email="javimtib92@gmail.com" },
]
description = "A small package with a scrapy spider to scrap linkedin user profile"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "scrapy",
  "black",
]

[project.urls]
Homepage = "https://github.com/Javimtib92/linkedin-profile-scraper"
Issues = "https://github.com/Javimtib92/linkedin-profile-scraper/issues"